crates/hana_diegetic/tests/trybuild/fail/overlay_child_gap.rs
use hana_diegetic::El;
use hana_diegetic::In;

fn main() {
    let _ = El::overlay().child_gap(In(0.08));
}
